--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           npm run build
 
       # 部署到github
+      # 403 权限问题：https://blog.csdn.net/jj89929665/article/details/129817011
       - name: Deploy to Github
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
