--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "jm-garming",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.9",
+    "@vuepress/bundler-vite": "^2.0.0-rc.19",
+    "sass-embedded": "^1.83.0",
     "typescript": "^5.4.3",
-    "vue": "^3.4.21",
-    "vuepress": "^2.0.0-rc.9"
+    "vue": "^3.5.13",
+    "vuepress": "^2.0.0-rc.19",
+    "vuepress-theme-plume": "^1.0.0-rc.125"
   },
   "dependencies": {
-    "@vuepress/theme-default": "^1.9.10",
-    "vuepress-theme-plume": "1.0.0-rc.52"
+    "@vuepress/theme-default": "2.0.0-rc.68"
   }
 }
