--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "jm-node-switch && vuepress dev src --config ./config.js",
+    "dev": "vuepress dev src --config ./config.js",
     "build": "vuepress build src --config ./config.js",
     "deploy": "bash deploy.sh",
     "push": "bash push.sh",
@@ -13,12 +13,12 @@
   "author": "jm-garming",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.19",
-    "sass-embedded": "^1.83.0",
-    "typescript": "^5.4.3",
-    "vue": "^3.5.13",
-    "vuepress": "^2.0.0-rc.19",
-    "vuepress-theme-plume": "^1.0.0-rc.125"
+    "@vuepress/bundler-vite": "2.0.0-rc.19",
+    "sass-embedded": "1.83.0",
+    "typescript": "5.4.3",
+    "vue": "3.5.13",
+    "vuepress": "2.0.0-rc.19",
+    "vuepress-theme-plume": "1.0.0-rc.125"
   },
   "dependencies": {
     "@vuepress/theme-default": "2.0.0-rc.68",
