--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "jm-garming",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.19",
+    "@vuepress/bundler-vite": "^2.0.0-rc.23",
     "sass-embedded": "1.83.0",
     "typescript": "5.4.3",
     "vue": "3.5.13",
-    "vuepress": "2.0.0-rc.19",
+    "vuepress": "^2.0.0-rc.23",
     "vuepress-theme-plume": "1.0.0-rc.125"
   },
   "dependencies": {
